objects/DocumentType__c.object
<CustomObject>
    <fields>
        <fullName>ArchivalDate__c</fullName>
        <description>it is only for Document_Type_Outbound feed.</description>
        <label>ArchivalDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode Value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocTyp__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DocumentTypeCode__c</fullName>
        <label>DocumentTypeCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <description>Feed Outbound - Document Type</description>
        <label>Document Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileExtension__c</fullName>
        <description>Feed Outbound - Document Type</description>
        <formula>RIGHT( FileName__c , LEN(FileName__c ) - FIND(&quot;.&quot;,FileName__c ))</formula>
        <label>FileExtension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>Feed Outbound - Document Type</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LetterText__c</fullName>
        <description>HardCode Empty value.</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo__c</fullName>
        <label>Operating Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PkgCode__c</fullName>
        <label>Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintLetterHead__c</fullName>
        <label>PrintLetterHead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReqFulfillment__c</fullName>
        <label>Requires Fulfillment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorCode__c</fullName>
        <label>Vendor Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isReimbursement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReimbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>showMasterField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showMasterField</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>DocTyp__c</columns>
        <columns>DocumentTypeCode__c</columns>
        <columns>OpCo__c</columns>
        <columns>PkgCode__c</columns>
        <columns>IsActive__c</columns>
        <columns>isTrade__c</columns>
        <columns>ReqFulfillment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DT-{0000000}</displayFormat>
        <label>Document Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>